site mostly translation, still to check error page. Favicon added. Need to finish first blogpost

--- a/locales/en/blog.json
+++ b/locales/en/blog.json
@@ -1,4 +1,5 @@
 {
     "title" : "My blog",
-    "topmessage": "Below an oversight can be found of all my post up until now. More will follow!"
+    "topmessage": "Below an oversight can be found of all my post up until now. More will follow!",
+    "back" : "Back to all blogpost!"
 }
