--- a/locales/nl/blog.json
+++ b/locales/nl/blog.json
@@ -1,4 +1,5 @@
 {
     "title" : "Mijn blog",
-    "topmessage": "Hieronder is een overzicht te vinden van al mijn posts tot nu toe. Er volgen er meer!"
+    "topmessage": "Hieronder is een overzicht te vinden van al mijn posts tot nu toe. Er volgen er meer!",
+    "back" : "Terug naar alle blogposts!"
 }
