--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,6 +1,6 @@
 {
   "title": "Pim van Helvoirt - Home",
-  "footer" : "Looking for my contact details? \n\n[Click here](/nl/contact)",
+  "footer" : "Looking for my contact details? \n\n[Click here](contact)",
   "navhome" : "Home",
   "navblog" : "Blog",
   "navcontact" : "Contact Info",
