updated index text

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -1,5 +1,5 @@
 {
     "title" : "Pim van Helvoirt - Homepage",
-	"topcontent": "Hello! You've stumbled on the website of Pim van Helvoirt. I am a graduated student Bèta-gamma with a major in Artificial Intelligence from the university of Amsterdam. I've just finished my studies. \n\nOn the picture you can see me with me favorite plant, _the agave potatorum_. Read more about me [here](/aboutme). I also use this website to blog, and you can find some of my post below:",
+	"topcontent": "Hello! You've stumbled on the website of Pim van Helvoirt. I am a graduated student Bèta-gamma with a major in Artificial Intelligence from the university of Amsterdam. I've just finished my studies. \n\nOn the picture you can see me with my favorite plant, _the agave potatorum_. Read more about me [here](/aboutme). I also use this website to blog, and you can find some of my posts below:",
 	"botcontent": "Additionally you can find my [programming projects](/projects) and [resources](/resources), I've gathered over time."
 }
