minimal change to text on aboutme page

--- a/locales/en/aboutme.json
+++ b/locales/en/aboutme.json
@@ -2,5 +2,5 @@
     "title" : "Pim van Helvoirt - About me",
     "topcontent": "I am Pim van Helvoirt. In my free time I like to play chess and, if the weather allows it, I like to ride my racing bike. During my studies I've been very active in the student participation. In the past I was [the chair of the Central Student Council (article in Dutch)](https://www.folia.nl/actueel/112180/betagamma-student-pim-van-helvoirt-nieuwe-voorzitter-studentenraad). \n\n At the moment I've just finished my bachelor Bèta-gamma with a major in Artificial Intelligence at the university of Amsterdam. As of right now I am looking for a job.",
     "button": "Click here to see my CV.",
-    "errormessage": "Your browser does not support this, this is the direct download link."
+    "errormessage": "Your browser does not support this, this is the direct download"
 }
