made url previews for all pages

--- a/locales/en/blog.json
+++ b/locales/en/blog.json
@@ -1,5 +1,6 @@
 {
-    "title" : "My blog",
+    "title" : "Pim's blog",
+    "description" : "Welcome to my blog, you can read all posts here.",
     "topmessage": "Below an oversight can be found of all my post up until now. More will follow!",
     "from" : "from",
     "readingtime": "*Reading time {{time}} min!*",
