--- a/locales/en/projects.json
+++ b/locales/en/projects.json
@@ -1,5 +1,6 @@
 {
     "title" : "Pim van Helvoirt - Projects",
+    "description" : "The projects I've done so far, are listed on this page",
     "top" : "Below I've listed the different project I've done/coded so far.",
     "bot" : "Do you have a questions about one of the project? Don't hesitate to [contact me](/contact)."
 }
