--- a/locales/en/resources.json
+++ b/locales/en/resources.json
@@ -1,3 +1,5 @@
 {
+    "title" : "Pim van Helvoirt - Resources",
+    "description" : "The resources I've gathered so far, are listed on this page",
     "top" : "Below I've made a list of different resources I've gathered so far. This list is ordered alphabetically, and I am updating this continually _(last update was on: the 8th of September 2020)_. \n\nDo you have any questions about these items? Feel free to [contact](/contact) me."
 }
