--- a/locales/nl/aboutme.json
+++ b/locales/nl/aboutme.json
@@ -1,5 +1,6 @@
 {
 "title" : "Pim van Helvoirt - Over mij",
+"description" : "Lees alles over mij op deze pagina",
 "topcontent": "Ik ben Pim van Helvoirt. In mijn vrije tijd houd ik van schaken en bij mooi weer ben ik vaak te vinden op mijn wielrenfiets. In mijn studententijd ben ik veel actief geweest in de studentenvertegenwoordiging. Zo ben ik in het verleden [de voorzitter van de Centrale Studentenraad geweest](https://www.folia.nl/actueel/112180/betagamma-student-pim-van-helvoirt-nieuwe-voorzitter-studentenraad). \n\nOp het moment ben ik net klaar met mijn studie Bètagamma met een major Kunstmatige Intelligentie aan de Universiteit van Amsterdam, en dus ik ben op zoek naar werk.",
 "button": "Klik hier om mijn CV te zien.",
 "errormessage": "Uw browser ondersteund dit niet, dit is de direct download"
