--- a/locales/nl/blog.json
+++ b/locales/nl/blog.json
@@ -1,5 +1,6 @@
 {
-    "title" : "Mijn blog",
+    "title" : "Pim's blog",
+    "description" : "Welkom op mijn blog, je kunt al mijn posts hier lezen.",
     "topmessage": "Hieronder is een overzicht te vinden van al mijn posts tot nu toe. Er volgen er meer!",
     "from" : "van",
     "readingtime": "*Leestijd {{time}} min!*",
