--- a/locales/nl/common.json
+++ b/locales/nl/common.json
@@ -3,7 +3,7 @@
   "footer" : "Op zoek naar mijn contactgegevens? \n\n[Klik hier](/nl/contact)",
   "navhome" : "Home",
   "navblog" : "Blog",
-  "navcontact" : "Contact Informatie",
+  "navcontact" : "Contact",
   "navaboutme" : "Over mij",
   "navprojects" : "Projecten",
   "navresources" : "Resources",
