--- a/locales/nl/contact.json
+++ b/locales/nl/contact.json
@@ -1,4 +1,5 @@
 {
-    "title" : "Pim van Helvoirt - Contact",
+    "title" : "Contact",
+    "description" : "Je kunt mijn contactinformatie vinden op deze pagina.",
     "message" : "Hieronder zijn mijn contactgegevens te vinden op verschillende platformen te vinden. Ik ben niet te vinden op Facebook of Instagram. \n\nStuur me gerust een email!"
 }
