--- a/locales/en/contact.json
+++ b/locales/en/contact.json
@@ -1,4 +1,5 @@
 {
-    "title" : "Pim van Helvoirt - Contact",
+    "title" : "Contactinformatie",
+    "description" : "You can find my contact details on this page.",
     "message": "Below my contact details can be found on different platforms. I do not have an account on Facebook or Instagram. \n\nFeel free to email me!"
 }
