resolved error in link preview

--- a/locales/nl/resources.json
+++ b/locales/nl/resources.json
@@ -1,5 +1,5 @@
 {
     "title" : "Pim van Helvoirt - Resources",
-    "description" : "The resources die ik tot nu toe heb verzameld, zijn te vinden op deze pagina",
+    "description" : "De resources die ik tot nu toe heb verzameld, zijn te vinden op deze pagina",
     "top" : "Hieronder is een lijst van verschillende resources die ik tot nu toe verzameld heb te vinden. Deze lijst is op alfabetische volgorde en update ik nog steeds _(laatst op: 8 September 2020)_. \n\nHeb je vragen over deze lijst? Neem dan [contact](/nl/contact) met mij op."
 }
