--- a/locales/en/aboutme.json
+++ b/locales/en/aboutme.json
@@ -1,7 +1,7 @@
 {
     "title" : "About me",
     "description" : "Read all about me on this page",
-    "topcontent": "I am Pim van Helvoirt. In my free time I like to play chess and, if the weather allows it, I like to ride my racing bike. During my studies I've been very active in the student participation. In the past I was [the chair of the Central Student Council (article in Dutch)](https://www.folia.nl/actueel/112180/betagamma-student-pim-van-helvoirt-nieuwe-voorzitter-studentenraad). \n\n At the moment I've just finished my bachelor Bèta-gamma with a major in Artificial Intelligence at the university of Amsterdam. As of right now I am looking for a job.",
+    "topcontent": "I am Pim van Helvoirt. In my free time I like to play chess and, if the weather allows it, I like to ride my racing bike. During my studies I've been very active in the student participation. In the past I was [the chair of the Central Student Council (article in Dutch)](https://www.folia.nl/actueel/112180/betagamma-student-pim-van-helvoirt-nieuwe-voorzitter-studentenraad). \n\n At the moment I've just finished my bachelor Bèta-gamma with a major in Artificial Intelligence at the university of Amsterdam. Currently I've just found a new job.",
     "button": "Click here to see my CV.",
     "errormessage": "Your browser does not support this, this is the direct download"
 }
