change carousel img types to speed up loading, edited some text on mainpage and aboutme page.

--- a/locales/nl/index.json
+++ b/locales/nl/index.json
@@ -1,6 +1,6 @@
 {
     "title" : "Pim van Helvoirt - Homepagina",
     "description" : "Welkom op mijn homepagina!",
-	"topcontent": "Hallo! Je bent op de website van Pim van Helvoirt belandt. Ik ben een afgestudeerde bachelorstudent Beta-gamma met Kunstmatige Intelligentie aan de Universiteit van Amsterdam en net klaar met mijn studie. \n\nOp de foto zie je mij met mijn favoriete plant, _de agave potatorum_. Lees hier meer [over mij](/nl/aboutme). Op deze website blog ik ook, hieronder is een overzicht te vinden van mijn posts:",
+	"topcontent": "Hallo! Je bent op de website van Pim van Helvoirt belandt. Ik heb Bèta-gamma gestudeerd aan de Universiteit van Amsterdam en werk nu in de Cybersecurity. \n\nOp de foto zie je mij met mijn favoriete plant, _de agave potatorum_. Lees hier meer [over mij](/nl/aboutme). Op deze website blog ik ook, hieronder is een overzicht te vinden van mijn posts:",
 	"botcontent": "Verder vind je op deze website mijn [programmeerprojecten](/nl/projects) en [resources](/nl/resources), die ik over de tijd heb verzameld."
 }
