updated website, now does bilangual routing

--- a/locales/nl/common.json
+++ b/locales/nl/common.json
@@ -1,6 +1,6 @@
 {
   "title": "Pim van Helvoirt - Home",
-  "footer" : "Op zoek naar mijn contactgegevens? \n\n[Klik hier](/nl/contact)",
+  "footer" : "Op zoek naar mijn contactgegevens? \n\n[Klik hier](/contact)",
   "navhome" : "Home",
   "navblog" : "Blog",
   "navcontact" : "Contact",
